# musicly

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  TODO.md  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  utils.py
.github/workflows/: ci.yaml  python-publish.yml
player/: main.py  utils.py
player/utils/: download.py
tests/: README.md  test_cli.py
