[project]
name = "terminal-music-player"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "just-playback>=0.1.8",
    "typer>=0.20.0",
    "yt-dlp>=2025.10.22",
]

[project.scripts]
play = "player.main:app"

[tool.setuptools]
packages = ["player", "downloads"]